service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-flask-webapp
spec:
  selector:
    app: simple-flask-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
